--- a/public/Css/embla.css
+++ b/public/Css/embla.css
@@ -146,7 +146,7 @@
   }
   
   .embla__dot:after {
-    background-color: #efefef;
+    background-color: var(--mainWhite);
     width: 100%;
     height: 0.4rem;
     content: "";
