--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
         <div class="header-main">
             <div class="bio">
                 <h2>Hi there!</h2>
-                <h1>I'M <span class="name">Paul Lite</span></h1>
+                <h1>Creative <span class="name">Lite</span></h1>
                 <h2>I am a graphic designer</h2>
                 <p>We make it easy to work with professional, creative experts from around the world and build your
                     brand through custom, memorable design. </p>
