--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,7 +143,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
 
@@ -157,7 +157,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
                             amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
                         </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Get in Touch
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
                         </a>
                     </div>
                 </div>
