--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,6 +81,7 @@
                 </button> -->
             </div>
         </div>
+        
 
     </div>
 
@@ -281,6 +282,42 @@
 
 
         </div>
+        <div class="why-choose-me-wrapper">
+            <h2>Why Choose me</h2>
+            <div class="why-choose-me">
+                <div class="quality">
+                    <i class="fab fa-algolia"></i>
+                    <div>
+                        <h3>Top Quality</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    
+                </div>
+                <div class="quality">
+                    <i class="fab fa-algolia"></i>
+                    <div>
+                        <h3>Top Quality</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="quality">
+                    <i class="fab fa-algolia"></i>
+                    <div>
+                        <h3>Top Quality</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="quality">
+                    <i class="fab fa-algolia"></i>
+                    <div>
+                        <h3>Top Quality</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
     </div>
 </section>
 
