--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,8 @@
     <div class="wrapper">
         <div class="header-main">
             <div class="bio">
-                <h2>Hi there!</h2>
-                <h1>Creative <span class="name">Lite</span></h1>
-                <h2>I am a graphic designer</h2>
+                <h2>Design at its finest!</h2>
+                <h1 class="name">Creative Lite Studios</h1>
                 <p>We make it easy to work with professional, creative experts from around the world and build your
                     brand through custom, memorable design. </p>
                 <div class="btn-container">
@@ -274,15 +273,39 @@
 
             </div>
             <div class="skills-img-right">
-                <div>
-                    <h1>250+ <br> Projects!</h1>
+                <div class="skills-why-choose-me">
+                    <h2>Why Choose Creative Lite</h2>
+                    <p>Creative Lite Studios is the most trusted source for graphic designs online. We invented design contests and have been growing and improving our platform ever since. We offer:</p>
+                    <div class="skills-why-choose-me-wrapper">
+                        <div>
+                            <i class="far fa-check-circle"></i>
+                            <p>Professional designers that are hand-vetted for quality</p> 
+                          </div>
+                          <div class="padding-top-bottom">
+                              <i class="far fa-check-circle"></i>
+                              <p>Professional designers that are hand-vetted for quality</p> 
+                          </div>
+                          <div class="padding-top-bottom">
+                              <i class="far fa-check-circle"></i>
+                              <p>Professional designers that are hand-vetted for quality</p> 
+                          </div>
+                          <div>
+                              <i class="far fa-check-circle"></i>
+                              <p>Professional designers that are hand-vetted for quality</p> 
+                          </div>
+
+                    </div>
+                    
                 </div>
+                <!-- <div class="project-count">
+                    <h1>250+ <br> Projects!</h1>
+                </div> -->
 
             </div>
 
 
         </div>
-        <div class="why-choose-me-wrapper">
+        <!-- <div class="why-choose-me-wrapper">
             <h2>Why Choose me</h2>
             <div class="why-choose-me">
                 <div class="quality">
@@ -316,7 +339,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         
     </div>
 </section>
