--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,12 +39,7 @@
                         </div>
                         <div class="embla__slide">
                             <div class="embla__slide__inner">
-                                <img class="embla__slide__img" src="/images/mokups/14.jpg" />
-                            </div>
-                        </div>
-                        <div class="embla__slide">
-                            <div class="embla__slide__inner">
-                                <img class="embla__slide__img" src="/images/mokups/18.jpg" />
+                                <img class="embla__slide__img" src="/images/mokups/coffee.jpg" />
                             </div>
                         </div>
                         <div class="embla__slide">
