--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,9 +8,13 @@
     <title>Paul Lite | graphic designer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;1,400&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&family=Raleway:ital,wght@0,400;0,500;0,600;1,400&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+
     <link rel="stylesheet" href="Css/embla.css">
     <link rel="stylesheet" href="Css/styles.css">
 
@@ -20,7 +24,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/907d5275a6.js" crossorigin="anonymous"></script>
-   
+
 
 
 </head>
