--- a/views/home.ejs
+++ b/views/home.ejs
@@ -558,8 +558,14 @@
             <img class="press-logo" src="../images/mashable.png" alt="mashable-logo">
         </div>
 
-
+        <div class="call-to-action">
+            <h2>Are you interested in what you see? Let us get to work and build your brand together!</h2>
+            <button class="cta-btn btn about-btn">
+                Let's talk <i class="fas fa-long-arrow-alt-right"></i>
+            </button>
+        </div>
     </div>
+    
 
 </section>
 
