--- a/views/home.ejs
+++ b/views/home.ejs
@@ -123,92 +123,143 @@
     <div class="wrapper">
         <div class="skills-cards">
             <div class="heading-container">
-                <h1>Our Services</h1>
+                <h1 class="heading">Our Services</h1>
+                <p>Graphic Design at its finest!</p>
                 <div class="primary-rule"></div>
                 <div class="secondary-rule"></div>
             </div>
-
-            <div class="skills-cards-inner">
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+            <div class="what-we-do-wrapper">
+                <div class="job border-btm">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
-
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+                <div class="job border-btm second-pad-top">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+                <div class="job border-btm third-pad-top">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+                <div class="job border-top fouth-border-btm">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+                <div class="job border-top fifth-border-btm">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
-                <div class="card">
-                    <div class="head-section">
-                        <img src="../images/ui.png" alt="ui-design">
-                        <h2>Graphic Design</h2>
+                <div class="job border-top">
+                    <i class="fas fa-pencil-ruler"></i>
+                    <div>
+                        <h3>Logo design</h3>
+                        <p>State of the art Logo design</p>
                     </div>
-                    <div class="more">
-                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
-                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
-                        </p>
-                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
-                        </a>
-                    </div>
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </div>
             </div>
+
+            <!-- <div class="skills-cards-inner">
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="head-section">
+                        <img src="../images/ui.png" alt="ui-design">
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="more">
+                        <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit
+                            amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor
+                        </p>
+                        <a href="#portfolio" class="btn work service-btn" role="button">Learn more
+                        </a>
+                    </div>
+                </div>
+            </div> -->
         </div>
 
     </div>
