--- a/views/home.ejs
+++ b/views/home.ejs
@@ -140,7 +140,7 @@
                 <div class="job border-btm second-pad-top">
                     <i class="fas fa-pencil-ruler"></i>
                     <div>
-                        <h3>Logo design</h3>
+                        <h3>Posters, Banners and flyers</h3>
                         <p>State of the art Logo design</p>
                     </div>
                     <i class="fas fa-long-arrow-alt-right"></i>
@@ -148,7 +148,7 @@
                 <div class="job border-btm third-pad-top">
                     <i class="fas fa-pencil-ruler"></i>
                     <div>
-                        <h3>Logo design</h3>
+                        <h3>Corperate Branding</h3>
                         <p>State of the art Logo design</p>
                     </div>
                     <i class="fas fa-long-arrow-alt-right"></i>
@@ -156,7 +156,7 @@
                 <div class="job border-top fouth-border-btm">
                     <i class="fas fa-pencil-ruler"></i>
                     <div>
-                        <h3>Logo design</h3>
+                        <h3>T-shirt design and printing</h3>
                         <p>State of the art Logo design</p>
                     </div>
                     <i class="fas fa-long-arrow-alt-right"></i>
@@ -164,7 +164,7 @@
                 <div class="job border-top fifth-border-btm">
                     <i class="fas fa-pencil-ruler"></i>
                     <div>
-                        <h3>Logo design</h3>
+                        <h3>Book design and layering</h3>
                         <p>State of the art Logo design</p>
                     </div>
                     <i class="fas fa-long-arrow-alt-right"></i>
@@ -172,7 +172,7 @@
                 <div class="job border-top">
                     <i class="fas fa-pencil-ruler"></i>
                     <div>
-                        <h3>Logo design</h3>
+                        <h3>Ad Banners</h3>
                         <p>State of the art Logo design</p>
                     </div>
                     <i class="fas fa-long-arrow-alt-right"></i>
